apps/miniserve/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniserve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniserve
  template:
    metadata:
      labels:
        app: miniserve
    spec:
      containers:
        - name: miniserve
          image: docker.io/svenstaro/miniserve:0.35.0-alpine
          args: ["/config"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 16Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: config-volume
              mountPath: /config
              subPath: miniserve
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: data-pvc
