apps/miniserve/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miniserve-service
spec:
  selector:
    app: miniserve
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
